[tool.poetry]
name = "wordformcnt"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.7"
conllu = "^1.4"
finntk = ">=0.0.61"
lextract = {git = "../lextract/", rev = "18af4d7bc9f75583316d90020d22d0595c28c884"}
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
