[tool.poetry]
name = "wordformcnt"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.7"
conllu = "^1.4"
finntk = ">=0.0.61"
lextract = {git = "https://github.com/frankier/lextract.git", rev = "b64877010945949679114a07b1d3f92bc8cf2856"}
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
