[tool.poetry]
name = "wordformcnt"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.7"
conllu = "^1.4"
finntk = ">=0.0.61"
lextract = {git = "https://github.com/frankier/lextract.git", rev = "ed34acc3d4c3568525142659476307c5bdfbf3a3"}
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
